# Adso

./: .gitignore  CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  LICENSE.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp  niftiVolume.cpp  niftiVolume.h  resources.qrc
assets/: logo.icns
